peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/SDR_Prospecting_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This contains the settings for the SDR Campaign automation that are configurable to aid in the scalability of the solution</description>
    <label>SDR Prospecting Settings</label>
</CustomObject>