peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/AccountEngagementScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>AccountEngagementScoreThreshold__c</fullName>
    <defaultValue>25</defaultValue>
    <description>SAL-1705</description>
    <inlineHelpText>What is the account engagement score threshold?</inlineHelpText>
    <label>Account Engagement Score Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>