peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/CampaignsToExcludeFromTransitions__c.field-meta.xml
<CustomField>
    <fullName>CampaignsToExcludeFromTransitions__c</fullName>
    <defaultValue>&quot;Digital&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This should be any campaign names that should be excluded from removal when a campaign member transitions into a new campaign. If multiple values are needed, be sure to have commas between each (no spaces between the commas)</inlineHelpText>
    <label>Campaigns To Exclude From Transitions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>