peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/Dealer_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Score_Threshold__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>The threshold that the dealers will need to meet to have a lead generated</inlineHelpText>
    <label>Dealer Score Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>