peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/DecisionOppOutcome__c.field-meta.xml
<CustomField>
    <fullName>DecisionOppOutcome__c</fullName>
    <defaultValue>&quot;No Attempt&quot;</defaultValue>
    <description>SAL-2034</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the opp outcome that will be set if there is an opp in the decision stage</inlineHelpText>
    <label>Decision Opp Outcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>