peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/LeadClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadClosedStatus__c</fullName>
    <defaultValue>&quot;Closed - Lost&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the lead is auto closed, what status should it be set to?</inlineHelpText>
    <label>Lead Auto Closed Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>