peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/LeadCloseOutcome__c.field-meta.xml
<CustomField>
    <fullName>LeadCloseOutcome__c</fullName>
    <defaultValue>&quot;Unable to Contact DM&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will be the default lead out come applied to the lead when auto closed</inlineHelpText>
    <label>Lead Auto Close Outcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>