peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/LeadWarmTransferStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadWarmTransferStatus__c</fullName>
    <defaultValue>&quot;Active Warm Transfer&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The status that a lead should be set to if warm transferred</inlineHelpText>
    <label>Lead Warm Transfer Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>