peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/MaxOpenTasks__c.field-meta.xml
<CustomField>
    <fullName>MaxOpenTasks__c</fullName>
    <defaultValue>150</defaultValue>
    <inlineHelpText>What is the maximum number of open tasks that an agent can take on?</inlineHelpText>
    <label>Max Open Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>