peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/TaskPullLimit__c.field-meta.xml
<CustomField>
    <fullName>TaskPullLimit__c</fullName>
    <defaultValue>20</defaultValue>
    <inlineHelpText>What&apos;s the maximum number of tasks that can be pulled at once</inlineHelpText>
    <label>Task Pull Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>