peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/TaskQueueName__c.field-meta.xml
<CustomField>
    <fullName>TaskQueueName__c</fullName>
    <defaultValue>&quot;SDR&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the default queue that tasks and leads assigned to a new campaign are assigned to</inlineHelpText>
    <label>Task Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>