peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/WarmTransferTaskOutcome__c.field-meta.xml
<CustomField>
    <fullName>WarmTransferTaskOutcome__c</fullName>
    <defaultValue>&quot;Contact with Decision Maker - Warm Transfer&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the task outcome of a task that has been warm transferred</inlineHelpText>
    <label>Warm Transfer Task Outcome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>