peac_dev/force-app/main/default/objects/SDR_Prospecting_Settings__c/fields/WeightingFactor__c.field-meta.xml
<CustomField>
    <fullName>WeightingFactor__c</fullName>
    <defaultValue>25</defaultValue>
    <description>SAL-1866</description>
    <inlineHelpText>This is the weighting factor used for calculating the lead scores</inlineHelpText>
    <label>Weighting Factor</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>